apps/workflows/overlays/codefreshtest2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: codefreshtest2-workflows-ingress
  namespace: codefreshtest2
spec:
  ingressClassName: nginx
  rules:
  - host: codefreshtest2.ad2661d85addd45a88a7770654d1673b-1836621158.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflows(/|$)(.*)
        pathType: ImplementationSpecific
